# claudepro

./: .gitignore  CURRICULUM.md  README.md  docker-compose.yml
.claude/: launch.json  settings.json
.github/workflows/: ci.yml  deploy.yml  observability-check.yml
backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  triage.py
backend/scripts/: check_triage_health.py  triage_metrics.py
backend/tests/: test_logging.py  test_tasks.py  test_triage.py
docs/: index.html
docs/lessons/: 00-setup.md  01-foundations.md  02-agentic-workflow.md  03-testing.md  04-ci-cd.md  05-deployment.md  06-observability.md  07-mcp-agents.md  README.md
frontend/: Dockerfile  fly.toml  nginx.conf.template  package-lock.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx
